<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.AddEmployeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/employee_profile"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:gravity="center"
                android:hint="@string/employee_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textAllCaps="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/profile_picture_id"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/profile_picture"
                app:srcCompat="@drawable/ic_default_user" />

            <ImageView
                android:id="@+id/profile_camera_id"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/add_or_replace_image"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_camera_black" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_dob_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:gravity="center"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textAlignment="center"
                android:textAllCaps="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_salary_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:gravity="center"
                android:hint="@string/salary"
                android:inputType="number"
                android:textAlignment="center"
                android:textAllCaps="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/profile_add_skills_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/lightPrimaryColor"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/add_skills"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/profile_skills_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/profile_skill1_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_1"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/profile_skill2_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_2"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/profile_skill3_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_3"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/profile_skill4_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_4"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/profile_skill5_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_5"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/profile_skill6_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_6"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/profile_skill7_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_7"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/profile_skill8_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_8"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/profile_skill9_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/skill_9"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/profile_create_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

</ScrollView>