<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_circular_button"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/dialog_employee_picture_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/ic_default_user" />

    <TextView
        android:id="@+id/dialog_employee_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_employee_picture_id"
        android:layout_margin="5dp"
        android:background="@color/lightPrimaryColor"
        android:fontFamily="@font/muli_bold"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingBottom="5dp"
        android:text="@string/employee_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/employee_dialog_dob_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_employee_name_id"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/date_of_birth_"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/employee_dialog_dob_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/employee_dialog_salary_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employee_dialog_dob_layout_id"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/dummy_salary_"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/employee_dialog_salary_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employee_dialog_salary_layout_id"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/muli_bold"
            android:gravity="center"
            android:text="@string/skills_"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/employee_dialog_skills_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/skills"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>